test/classes/delete-free/bad-retain-error.1.good
bad-retain-error.chpl:13: In function 'main':
bad-retain-error.chpl:16: error: cannot retain 'unmanaged B' (expected 'unmanaged A')
